Add readonly to recording-act-edition + UI improvements

--- a/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
+++ b/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
 
-      <div fxFlex="290px">
+      <div fxFlex>
         <label>Distrito:</label>
         <emp-ng-select [formControlName]="controls.recorderOfficeUID"
           [items]="recorderOfficeList"
