UI changes for file-viewer

--- a/src/app/views/land-controls/file-viewer/file-viewer.component.html
+++ b/src/app/views/land-controls/file-viewer/file-viewer.component.html
@@ -17,7 +17,7 @@
 
   </div>
 
-  <div class="card-body" [empNgSpinnerHost]="spinner">
+  <div class="card-body" [empNgSpinnerHost]="spinner" [style.marginTop.px]="4">
 
     <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
 
