--- a/src/app/workspaces/land-transactions/parts/land-transaction-tabbed-view.component.html
+++ b/src/app/workspaces/land-transactions/parts/land-transaction-tabbed-view.component.html
@@ -17,10 +17,10 @@
   </mat-tab>
 
   <mat-tab label="Inscripción" *ngIf="transaction.actions.show.instrumentRecordingTab">
-    <emp-land-registration-main-page
+    <emp-land-registration
       [transactionUID]="transaction.uid">
 
-    </emp-land-registration-main-page>
+    </emp-land-registration>
   </mat-tab>
 
   <mat-tab label="Emisión de certificados" *ngIf="transaction.actions.show.certificatesEmissionTab" disabled>
