--- a/src/app/views/tract-index/tract-index-explorer/tract-index-entries-viewer.component.html
+++ b/src/app/views/tract-index/tract-index-explorer/tract-index-entries-viewer.component.html
@@ -7,7 +7,7 @@
   </emp-land-tract-index-entries-filter>
 
   <emp-land-tract-index-entries-table fxFlex
-    [tractIndexEntriesList]="tractIndex.tractIndex"
+    [tractIndexEntriesList]="tractIndex.entries"
     [filter]="filter"
     [selectedTractIndexEntry]="selectedTractIndexEntry"
     (tractIndexEntriesTableEvent)="onTractIndexEntriesTableEvent($event)">
