--- a/src/app/views/tract-index/tract-index-explorer/tract-index-entries-filter.component.html
+++ b/src/app/views/tract-index/tract-index-explorer/tract-index-entries-filter.component.html
@@ -9,8 +9,8 @@
 
           <label>Tipo:</label>
 
-          <emp-ng-select name="type"
-            [(ngModel)]="formData.type"
+          <emp-ng-select name="entryType"
+            [(ngModel)]="formData.entryType"
             [items]="tractIndexEntryTypeList"
             [config]="{clearable: true}"
             placeholder="Todos"
