--- a/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
+++ b/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
@@ -45,8 +45,10 @@
     class="secondary">
 
     <emp-land-recordable-subject-tabbed-view
-      [instrumentRecording]="selectedRecordingAct.instrumentRecording"
-      [recordingAct]="selectedRecordingAct.recordingAct"
+      [instrumentRecordingUID]="selectedRecordingAct.instrumentRecording.uid"
+      [recordingActUID]="selectedRecordingAct.recordingAct.uid"
+      [canEditRecordableSubject]="selectedRecordingAct.instrumentRecording.actions.can.openInstrument"
+      [canEditTractIndex]="false"
       (recordableSubjectTabbedViewEvent)="onRecordableSubjectTabbedViewEvent($event)">
 
     </emp-land-recordable-subject-tabbed-view>
