--- a/src/app/views/registration/recordable-subject/recordable-subject-tabbed-view.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-tabbed-view.component.html
@@ -2,17 +2,22 @@
 <emp-ng-card
   [title]="cardTitle"
   [hint]="cardHint"
+  [empNgSpinnerHost]="spinner"
   (cardClose)="onClose()">
+
+  <emp-ng-spinner #spinner [visible]="isLoading" >
+
+  </emp-ng-spinner>
 
   <mat-tab-group>
 
     <mat-tab [label]="tabEditorLabel">
 
       <emp-land-recordable-subject-editor
-       [instrumentRecordingUID]="instrumentRecording.uid"
-       [recordingActUID]="recordingAct.uid"
-       [recordableSubject]="recordingAct.recordableSubject"
-       [readonly]="instrumentRecording.actions.can.openInstrument"
+       [instrumentRecordingUID]="instrumentRecordingUID"
+       [recordingActUID]="recordingActUID"
+       [recordableSubject]="tractIndex.recordableSubject"
+       [readonly]="canEditRecordableSubject"
        (recordableSubjectEditorEvent)="onRecordableSubjectEditorEvent($event)">
 
       </emp-land-recordable-subject-editor>
