--- a/src/app/views/tract-index/tract-index-explorer/tract-index-entries-table.component.html
+++ b/src/app/views/tract-index/tract-index-explorer/tract-index-entries-table.component.html
@@ -2,21 +2,21 @@
 
   <table mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="name">
+    <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      <td mat-cell *matCellDef="let row">{{row.description}}</td>
     </ng-container>
 
     <ng-container matColumnDef="documentID">
       <th mat-header-cell *matHeaderCellDef> Documento / Registro </th>
       <td mat-cell *matCellDef="let row" class="nowrap">
         <div [style.height.px]="15" [style.marginBottom.px]="8">
-          <a *ngIf="!!row.documentID" class="link">
-            {{row.documentID ?? '-'}}
+          <a *ngIf="!!row.officialDocument.documentID" class="link">
+            {{row.officialDocument.documentID ?? '-'}}
           </a>
-          <span *ngIf="!row.documentID">-</span>
+          <span *ngIf="!row.officialDocument.documentID">-</span>
         </div>
-        {{row.recordingTime | dateTimeFormat}}
+        {{row.requestedTime | dateTimeFormat}}
       </td>
     </ng-container>
 
@@ -24,12 +24,12 @@
       <th mat-header-cell *matHeaderCellDef> Trámite / Presentación </th>
       <td mat-cell *matCellDef="let row" class="nowrap">
         <div [style.height.px]="15" [style.marginBottom.px]="8">
-          <a *ngIf="!!row.transactionID" class="link">
-            {{row.transactionID}}
+          <a *ngIf="!!row.transaction.transactionID" class="link">
+            {{row.transaction.transactionID}}
           </a>
-          <span *ngIf="!row.transactionID">-</span>
+          <span *ngIf="!row.transaction.transactionID">-</span>
         </div>
-        {{row.presentationTime | dateTimeFormat}}
+        {{row.issueTime | dateTimeFormat}}
       </td>
     </ng-container>
 
