Add actions to TractIndex and TractIndexEntry interfaces

--- a/src/app/views/registration/recordable-subject/recordable-subject-tabbed-view.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-tabbed-view.component.html
@@ -33,7 +33,7 @@
       <emp-land-recordable-subject-history
         [recordableSubjectUID]="tractIndex.recordableSubject.uid"
         [tractIndexEntriesList]="tractIndex.entries"
-        [canEdit]="canEditTractIndex">
+        [actions]="tractIndex.actions">
 
       </emp-land-recordable-subject-history>
 
