--- a/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
@@ -49,7 +49,7 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
-        <mat-icon
+        <mat-icon *ngIf="row.actions.canBeDeleted"
           (click)="removeRecordingAct(row)"
           title="Elimiar este acto">
           delete
@@ -68,26 +68,29 @@
 </div>
 
 
-<ng-container *ngIf="canEdit">
+<ng-container *ngIf="actions.canBeClosed || actions.canBeOpened || actions.canBeUpdated">
 
   <mat-divider class="divider-padding"></mat-divider>
 
   <div fxLayout="row" [style.marginRight.px]="8">
 
     <div fxFlex fxLayoutAlign="start">
-      <button type="button" class="btn"
+      <button type="button" class="btn" *ngIf="actions.canBeClosed"
         (click)="onCloseTractIndex()">
         Marcar la historia como completa
       </button>
+
+      <button type="button" class="btn" *ngIf="actions.canBeOpened"
+        (click)="onOpenTractIndex()">
+        Abrir la historia
+      </button>
     </div>
 
-    <div fxFlex fxLayoutAlign="end">
-
+    <div fxFlex fxLayoutAlign="end" *ngIf="actions.canBeUpdated">
       <button type="submit" class="btn-action"
        (click)="onOpenRecordingActCreator()">
         Agregar un acto a la historia
       </button>
-
     </div>
 
   </div>
