--- a/src/app/views/registration/recording-book/book-entry-list.component.html
+++ b/src/app/views/registration/recording-book/book-entry-list.component.html
@@ -1,4 +1,4 @@
-<div class="scrollable-container mat-elevation-z1" [style.maxHeight.%]="50" [style.margin.px]="3">
+<div class="scrollable-container mat-elevation-z1" [style.margin.px]="3">
 
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="recordingNo">
@@ -48,7 +48,7 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true;"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
       [ngClass]="{'row-selected': bookEntrySelected.uid === row.uid}"></tr>
   </table>
