--- a/src/app/views/registration/recording-book/recording-book-edition.component.html
+++ b/src/app/views/registration/recording-book/recording-book-edition.component.html
@@ -17,42 +17,48 @@
 
   <div class="card-body" [empNgSpinnerHost]="spinner">
 
-    <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
+    <div fxLayout="column" fxFlexFill>
 
-    <div class="list-selection-header">
+      <emp-ng-spinner #spinner [visible]="isLoading">
 
-      <emp-land-recording-book-selector
-        [showRecordingBookEntryField]="false"
-        (recordingBookSelectorEvent)="onRecordingBookSelectorEvent($event)">
+      </emp-ng-spinner>
 
-      </emp-land-recording-book-selector>
+      <div class="list-selection-header" fxFlex="none">
+
+        <emp-land-recording-book-selector
+          [showRecordingBookEntryField]="false"
+          (recordingBookSelectorEvent)="onRecordingBookSelectorEvent($event)">
+
+        </emp-land-recording-book-selector>
+
+      </div>
+
+      <div fxFlex style="overflow-y: auto;">
+
+        <emp-ng-expansion-button *ngIf="displayRecordingBookEdition"
+          [(panelState)]="panelAddState"
+          [config]="{textButtonOpen: 'Agregar una inscripción a este volumen',
+                    textButtonClose: 'Cancelar agregar registro'}" class="no-margin">
+
+          <ng-container *ngIf="panelAddState">
+
+            <emp-land-book-entry-editor
+              (bookEntryEditorEvent)="onBookEntryEditorEvent($event)">
+
+            </emp-land-book-entry-editor>
+
+          </ng-container>
+
+        </emp-ng-expansion-button>
+
+        <emp-land-book-entry-list
+          [recordingBook]="selectedRecordingBook"
+          (bookEntryListEvent)="onBookEntryListEvent($event)">
+        </emp-land-book-entry-list>
+
+      </div>
 
     </div>
-
-    <ng-container>
-
-      <emp-land-book-entry-list
-        [recordingBook]="selectedRecordingBook"
-        (bookEntryListEvent)="onBookEntryListEvent($event)">
-      </emp-land-book-entry-list>
-
-      <emp-ng-expansion-button *ngIf="displayRecordingBookEdition"
-        [(panelState)]="panelAddState"
-        [config]="{textButtonOpen: 'Agregar una inscripción a este volumen',
-                  textButtonClose: 'Cancelar agregar registro'}" class="no-margin">
-
-        <ng-container *ngIf="panelAddState">
-
-          <emp-land-book-entry-editor
-            (bookEntryEditorEvent)="onBookEntryEditorEvent($event)">
-
-          </emp-land-book-entry-editor>
-
-        </ng-container>
-
-      </emp-ng-expansion-button>
-
-    </ng-container>
 
   </div>
 
