--- a/src/app/views/transactions/transaction-list/transaction-list.component.html
+++ b/src/app/views/transactions/transaction-list/transaction-list.component.html
@@ -47,46 +47,57 @@
   </div>
 
   <div class="card-body" [empNgSpinnerHost]="spinner">
-    <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
 
-    <div [@expandCollapse] *ngIf="selection.hasValue()">
-      <div class="list-selection-header" fxLayoutAlign="start center">
-        <span fxFlex="29%">¿Qué debo hacer con
-          <span *ngIf="selection.selected.length === 1">el trámite?</span>
-          <span *ngIf="selection.selected.length > 1">los {{selection.selected.length}} trámites?</span>
-        </span>
-        <button class="btn-action" (click)="onClickTransactionsSelectedOptions()">
-          Cambiar estado
-        </button>
-      </div>
-    </div>
+    <div fxLayout="column" fxFlexFill>
 
-    <div *ngFor="let transaction of transactionList"
-          class="list-item" [class.list-item-selected]="isSelected(transaction)"
-          matRipple [matRippleTrigger]="trigger" matRippleColor="rgb(44, 57, 66, 0.05)">
+      <emp-ng-spinner #spinner [visible]="isLoading">
 
-      <div class="list-item-checkbox">
-        <mat-checkbox
-          [checked]="selection.isSelected(transaction)"
-          (click)="$event.stopPropagation()"
-          (change)="selection.isSelected(transaction) ?
-                    selection.deselect(transaction) :
-                    selection.select(transaction)">
-        </mat-checkbox>
-      </div>
+      </emp-ng-spinner>
 
-      <div class="list-item-container">
-
-        <div class="list-item-name">
-          <strong>
-            <a #trigger (click)="onSelectTransaction(transaction)">{{transaction.requestedBy}}</a>
-          </strong>
+      <div [@expandCollapse] *ngIf="selection.hasValue()" fxFlex="none">
+        <div class="list-selection-header" fxLayoutAlign="start center">
+          <span fxFlex="none">¿Qué debo hacer con
+            <span *ngIf="selection.selected.length === 1">el trámite?</span>
+            <span *ngIf="selection.selected.length > 1">los {{selection.selected.length}} trámites?</span>
+          </span>
+          <button class="btn-action" (click)="onClickTransactionsSelectedOptions()">
+            Cambiar estado
+          </button>
         </div>
+      </div>
 
-        <emp-land-transaction-list-item
-          [transaction]="transaction"
-          (optionsClick)="onClickTransactionOptions(transaction)">
-        </emp-land-transaction-list-item>
+      <div fxFlex style="overflow-y: auto;">
+
+        <div *ngFor="let transaction of transactionList"
+              class="list-item" [class.list-item-selected]="isSelected(transaction)"
+              matRipple [matRippleTrigger]="trigger" matRippleColor="rgb(44, 57, 66, 0.05)">
+
+          <div class="list-item-checkbox">
+            <mat-checkbox
+              [checked]="selection.isSelected(transaction)"
+              (click)="$event.stopPropagation()"
+              (change)="selection.isSelected(transaction) ?
+                        selection.deselect(transaction) :
+                        selection.select(transaction)">
+            </mat-checkbox>
+          </div>
+
+          <div class="list-item-container">
+
+            <div class="list-item-name">
+              <strong>
+                <a #trigger (click)="onSelectTransaction(transaction)">{{transaction.requestedBy}}</a>
+              </strong>
+            </div>
+
+            <emp-land-transaction-list-item
+              [transaction]="transaction"
+              (optionsClick)="onClickTransactionOptions(transaction)">
+            </emp-land-transaction-list-item>
+
+          </div>
+
+        </div>
 
       </div>
 
