--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -23,13 +23,13 @@ $box-shadow: 0 3px 1px -2px rgba(44, 57, 66, 0.1),
 
 .list-selection-header {
   background: $border-color-light;
-  padding: 5px;
-  margin: 3px;
   box-shadow: $box-shadow;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
-  z-index: 105;
+  padding: 5px;
+  margin: 3px 1px;
+  // position: -webkit-sticky; /* Safari */
+  // position: sticky;
+  // top: 0;
+  // z-index: 105;
 
   > span {
     padding: 8px;
