--- a/src/app/views/registration/recording-book/book-entry-edition.component.html
+++ b/src/app/views/registration/recording-book/book-entry-edition.component.html
@@ -24,7 +24,7 @@
                  textButtonClose: 'Cancelar registro'}">
 
       <emp-land-recording-act-creator *ngIf="panelAddState"
-        [instrumentRecording]="instrumentRecording"
+        [instrumentRecordingUID]="instrumentRecording.uid"
         [recordingActTypeGroupList]="recordingActTypeGroupList"
         (recordingActCreatorEvent)="onRecordingActCreatorEvent($event)">
       </emp-land-recording-act-creator>
