--- a/src/app/views/registration/recording-book/recording-book-selector.component.html
+++ b/src/app/views/registration/recording-book/recording-book-selector.component.html
@@ -15,6 +15,7 @@
                       dropdownPosition: selectorPosition }"
           [items]="recorderOfficeList"
           [required]="fieldsRequired"
+          [disabled]="hasRecorderOfficeDefault"
           [showError]="fieldsRequired && ( !recorderOfficeSelected || !recorderOfficeSelected.uid )"
           (changes)="onRecorderOfficeChange($event)">
         </emp-ng-select>
