--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -48,7 +48,6 @@
           </label>
           <emp-ng-select [formControlName]="controls.recordableSubject"
             [config]="{ clearable: true,
-                        hideSelected: true,
                         minTermLength: recordableSubjectMinTermLength,
                         dropdownPosition: 'top'  }"
             [items]="recordableSubjectList$ | async"
@@ -84,6 +83,18 @@
 
       </ng-container>
 
+      <ng-container *ngIf="registrationCommandRules.newPartition && !registrationCommandRules.selectSubject">
+
+        <div fxFlex class="resizable-field-width">
+
+          <ng-container *ngTemplateOutlet="newPartitionTemplate">
+
+          </ng-container>
+
+        </div>
+
+      </ng-container>
+
     </div>
 
 
@@ -102,15 +113,15 @@
           bindValue="uid">
 
             <ng-template #labelTemplate let-item="item">
-              {{item.name}}
-              {{item.presentationTime ? ', ' + ( item.presentationTime | dateTimeFormat ) : ''}}
-              {{item.documentID ? ', ' + item.documentID : ''}}
+              {{item.description}}
+              {{item.requestedTime ? ', ' + ( item.requestedTime | dateTimeFormat ) : ''}}
+              {{item.officialDocument.documentID ? ', ' + item.officialDocument.documentID : ''}}
             </ng-template>
 
             <ng-template #optionTemplate let-item="item">
-              {{item.name}}
-              {{item.presentationTime ? ', ' + ( item.presentationTime | dateTimeFormat ) : ''}}
-              {{item.documentID ? ', ' + item.documentID : ''}}
+              {{item.description}}
+              {{item.requestedTime ? ', ' + ( item.requestedTime | dateTimeFormat ) : ''}}
+              {{item.officialDocument.documentID ? ', ' + item.officialDocument.documentID : ''}}
             </ng-template>
 
         </emp-ng-select>
@@ -134,10 +145,14 @@
 
     <ng-container *ngIf="registrationCommandRules.selectBookEntry">
 
-      <div class="section-title">
+      <div class="section-title" *ngIf="!recordableSubjectUID">
         {{ registrationCommandRules.newPartition ?
           'Antecedente registral del predio del cual se va a desprender la fracción' :
           'Antecedente registral:' }}
+      </div>
+
+      <div class="section-title" *ngIf="recordableSubjectUID">
+        Inscripción donde está registrado el acto jurídico que se desea agregar
       </div>
 
       <div fxlayout="row" >
@@ -145,6 +160,7 @@
         <div fxFlex>
 
           <emp-land-recording-book-selector
+            [recorderOffice]="recorderOffice"
             [showRecordingBookEntryField]="true"
             [bookEntryInput]="checkBookEntryInput"
             [fieldsRequired]="true"
@@ -177,31 +193,13 @@
 
     </ng-container>
 
-    <div fxLayout="row" *ngIf="registrationCommandRules.newPartition">
+    <ng-container *ngIf="registrationCommandRules.newPartition && registrationCommandRules.selectSubject">
 
-      <div [fxFlex]="registrationCommandRules.selectBookEntry ? widthFirstColumn : '140px'"
-        [fxFlexOffset]="registrationCommandRules.selectBookEntry ? '0' : widthFirstColumn">
+      <ng-container *ngTemplateOutlet="newPartitionTemplate">
 
-        <label class="ellipsis">Tipo de la nueva fracción:</label>
+      </ng-container>
 
-        <emp-ng-select [formControlName]="controls.partitionType"
-          bindValue="name"
-          [items]="partitionKindList"
-          [showError]="formHandler.showInvalidControl(controls.partitionType)">
-        </emp-ng-select>
-
-      </div>
-
-      <div fxFlex="235px">
-
-        <label class="ellipsis">Número o identificador de la nueva fracción:</label>
-
-        <input type="text" class="text-box" [formControlName]="controls.partitionNo"
-          [class.invalid-control]="formHandler.showInvalidControl(controls.partitionNo)">
-
-      </div>
-
-    </div>
+    </ng-container>
 
     <mat-divider class="divider-padding"></mat-divider>
 
@@ -221,5 +219,37 @@
     </div>
 
   </div>
+
+  <ng-template #newPartitionTemplate>
+
+    <div fxLayout="row" fxLayout.lt-md="column">
+
+      <div [fxFlex]="registrationCommandRules.selectSubject ? widthFirstColumn : '50'" fxFlex.lt-md="none">
+
+        <label class="ellipsis">Tipo de la nueva fracción:</label>
+
+        <emp-ng-select [formControlName]="controls.partitionType"
+          [config]="{bindByValue: false}"
+          [bindLabel]="null"
+          [items]="partitionKindList"
+          [showError]="formHandler.showInvalidControl(controls.partitionType)">
+        </emp-ng-select>
+
+      </div>
+
+      <div [fxFlex]="registrationCommandRules.selectSubject ? 'auto' : '50'" fxFlex.lt-md="none">
+
+        <label class="ellipsis">Número o identificador de la nueva fracción:</label>
+
+        <input type="text" class="text-box" [formControlName]="controls.partitionNo"
+          [class.invalid-control]="formHandler.showInvalidControl(controls.partitionNo)">
+
+      </div>
+
+      <div fxFlex="150px" fxFlex.lt-md="0" *ngIf="registrationCommandRules.selectSubject"></div>
+
+    </div>
+
+  </ng-template>
 
 </form>
