Fix FileType and assets path cor SVG Icons

--- a/src/app/views/land-controls/file-viewer/file-viewer.component.html
+++ b/src/app/views/land-controls/file-viewer/file-viewer.component.html
@@ -4,7 +4,7 @@
 
     <div class="card-title">
 
-      {{ fileViewerData.title ? fileViewerData.title : 'Visor de Archivos' }}
+      {{ fileViewerData.title ? fileViewerData.title : 'Visor de archivos' }}
 
       <div class="card-hint" [innerHTML]="getHintText() | safeHtml">
 
