--- a/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
@@ -50,7 +50,7 @@
       <td mat-cell *matCellDef="let row" class="column-action">
         <mat-icon *ngIf="row.actions.canBeDeleted"
           (click)="onRemoveRecordingActClicked(row)"
-          title="Elimiar este acto">
+          title="Eliminar este acto">
           delete
         </mat-icon>
       </td>
