Hide instrument open/close buttons in edition mode

--- a/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
+++ b/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
@@ -229,24 +229,28 @@
           {{ submitButtonText }}
         </button>
 
-        <button *ngIf="actions.can.openInstrument"
-          (click)="openRegistration()"
-          class="btn-action">
-          Abrir registro
-        </button>
+        <ng-container *ngIf="!editionMode">
 
-        <button *ngIf="actions.can.closeInstrument"
-          (click)="closeRegistration()"
-          class="btn-action">
-          Cerrar registro
-        </button>
+          <button *ngIf="actions.can.openInstrument"
+            (click)="openRegistration()"
+            class="btn-action">
+            Abrir registro
+          </button>
+
+          <button *ngIf="actions.can.closeInstrument"
+            (click)="closeRegistration()"
+            class="btn-action">
+            Cerrar registro
+          </button>
 
 
-        <button *ngIf="!editionMode && actions.show.registrationStamps"
-          (click)="submitPrintRegistrationStampMedia()"
-          class="btn-action">
-          Imprimir sello interesado
-        </button>
+          <button *ngIf="actions.show.registrationStamps"
+            (click)="submitPrintRegistrationStampMedia()"
+            class="btn-action">
+            Imprimir sello interesado
+          </button>
+
+        </ng-container>
 
       </div>
 
