Rfx clean code and css code

--- a/src/app/shared/form-controls/file-print-preview/file-print-preview.component.html
+++ b/src/app/shared/form-controls/file-print-preview/file-print-preview.component.html
@@ -6,7 +6,7 @@
     [hint]="hint"
     (cardClose)="onClose()">
 
-    <div class="preview-container">
+    <div class="preview-container preview-padding">
 
       <div class="object-preview-container">
 
