--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -174,7 +174,7 @@
         <div fxflex="150px" [style.marginBottom.px]="1">
 
           <mat-checkbox [(ngModel)]="checkBookEntryInput" [ngModelOptions]="{standalone: true}"
-            (change)="onBookEntryCheckChanged($event.checked)"
+            (change)="onBookEntryCheckChanged()"
             style="display: block; padding-bottom: 4px; margin-top: -5px; padding-left: 15px;">
             Nueva inscripción
           </mat-checkbox>
