--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,4 @@
 @import './styles/ng-select.scss';
 @import './styles/text-editor.scss';
 @import './styles/reporting-formats.scss';
+@import './styles/file-preview.scss';
